tools/vault/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    app.kubernetes.io/part-of: acme-platform
    app.kubernetes.io/component: vault
